fix overflow

--- a/styles.css
+++ b/styles.css
@@ -53,9 +53,6 @@ body {
   font-size: 3rem;
 }
 
-.right-section {
-}
-
 .content {
   padding: 50px 0px;
   display: flex;
@@ -70,7 +67,7 @@ body {
 }
 
 .dummy-paragraph {
-  max-width: 75ch;
+  max-width: 65ch;
   color: var(--stark);
   text-align: center;
 }
